@@ -20,6 +20,7 @@ Morten:
 	* Print using pango context from GtkPrintContext for constistency
 	  between gui and non-gui.
 	* GUI files relating to cell sizes.
+	* Fix rare undo problem.
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.59
